docs(16): revise plans based on checker feedback
Split single 5-task plan into 2 focused plans:
- 16-01: Verify kernel compilation and GPU path purity (3 tasks)
- 16-02: Add comprehensive RoPE GPU tests (3 tasks)

Addressed checker issues:
- requirement_coverage: Added task to run existing rope_gpu_tests (ROPE-05)
- task_completeness: Enhanced verification in Task 1 with build log checks
- scope_sanity: Split 5-task plan into 2 plans (3 tasks each)

Phase 16 now has 2 parallel plans in Wave 1.

--- a/.planning/phases/16-gpu-rope-implementation/16-01-PLAN.md
+++ b/.planning/phases/16-gpu-rope-implementation/16-01-PLAN.md
@@ -5,57 +5,48 @@ type: execute
 wave: 1
 depends_on: []
 files_modified:
+  - build.rs
   - src/attention/rope.rs
   - src/attention/kernels.rs
-  - src/attention/rope_gpu_tests.rs
 autonomous: true
 user_setup: []
 
 must_haves:
   truths:
-    - "RoPE application runs on GPU for GPU tensors (ROPE-01)"
-    - "Multi-head rotation is handled correctly on GPU (ROPE-02)"
-    - "Position IDs are handled for sequences up to max_seq_len (ROPE-03)"
     - "RoPE kernel is compiled and loaded via build.rs (ROPE-04)"
     - "CPU-GPU transfer overhead is eliminated - no to_host_vec in GPU path (ROPE-06)"
+    - "GPU RoPE execution flow is documented and traceable (ROPE-01)"
   artifacts:
-    - path: "kernels/rope.hip"
-      provides: "Basic RoPE GPU kernel"
-      min_lines: 70
-    - path: "kernels/position_embeddings.hip"
-      provides: "Q+K RoPE kernel (single launch)"
-      min_lines: 90
+    - path: "build.rs"
+      provides: "Kernel compilation configuration"
+      contains: "rope\\.hip|position_embeddings\\.hip"
     - path: "src/attention/rope.rs"
-      provides: "apply_q_device() and apply_k_device() GPU methods"
-      contains: "apply_q_device|apply_k_device"
+      provides: "apply_rope_device() GPU method"
+      contains: "apply_rope_device"
     - path: "src/attention/kernels.rs"
-      provides: "rope_gpu_kernel() and position_embeddings_gpu_kernel() wrappers"
-      contains: "rope_gpu_kernel|position_embeddings_gpu_kernel"
+      provides: "rope_gpu_kernel() wrapper"
+      contains: "rope_gpu_kernel"
   key_links:
+    - from: "build.rs"
+      to: "kernels/rope.hip"
+      via: "KERNELS list includes rope.hip"
+      pattern: "rope\\.hip"
     - from: "src/attention/rope.rs"
       to: "src/attention/kernels.rs"
       via: "apply_rope_device() calls rope_gpu_kernel()"
       pattern: "rope_gpu_kernel"
     - from: "src/model/glm_position.rs"
-      to: "src/attention/kernels.rs"
-      via: "apply_position_embeddings_device() calls position_embeddings_gpu_kernel()"
-      pattern: "position_embeddings_gpu_kernel"
-    - from: "src/model/execution_plan/execution_plan_src.rs"
-      to: "src/model/glm_position.rs"
-      via: "self_attention() calls apply_position_embeddings_device()"
-      pattern: "apply_position_embeddings_device"
+      to: "src/attention/rope.rs"
+      via: "apply_position_embeddings_device() calls apply_rope_device()"
+      pattern: "apply_rope_device"
 ---
 
 <objective>
-Verify GPU RoPE kernel implementation satisfies all ROPE-01 through ROPE-06 requirements.
+Verify RoPE kernel compilation and GPU path purity.
 
-Purpose: Ensure Rotary Position Embeddings run on GPU, eliminating CPU-GPU transfer overhead per transformer layer. The infrastructure exists; this plan verifies correctness and adds missing test coverage.
+Purpose: Confirm RoPE kernels compile correctly and the GPU execution path eliminates CPU round-trip overhead. This is foundational verification before adding new tests.
 
-Output: Verified GPU RoPE implementation with comprehensive tests confirming:
-- GPU kernel is used for GPU tensors (no CPU round-trip)
-- Multi-head rotation works correctly
-- Position IDs are handled for long context
-- Kernel is compiled and loaded correctly
+Output: Verified kernel compilation with HSACO files present, confirmed pure GPU execution path without to_host_vec() in hot path.
 </objective>
 
 <execution_context>
@@ -68,48 +59,38 @@ Output: Verified GPU RoPE implementation with comprehensive tests confirming:
 @.planning/phases/16-gpu-rope-implementation/16-RESEARCH.md
 @.planning/ROADMAP.md
 
+@build.rs
 @src/attention/rope.rs
 @src/attention/kernels.rs
-@src/attention/rope_gpu_tests.rs
-@src/model/glm_position.rs
-@kernels/rope.hip
-@kernels/position_embeddings.hip
 </context>
 
 <tasks>
 
 <task type="auto">
-  <name>Verify RoPE kernel compilation and loading</name>
+  <name>Verify RoPE kernel compilation and loading (ROPE-04)</name>
   <files>build.rs</files>
   <action>
     Verify that RoPE kernels are compiled and HSACO files are generated:
-    1. Check build.rs lines 48-52 confirm rope.hip and position_embeddings.hip are in kernels list
-    2. Confirm ROPE_HSACO and POSITION_EMBEDDINGS_HSACO env vars are set during build
-    3. Run: cargo build --features rocm 2>&1 | grep -i "rope"
-    4. Verify output shows "Compiled kernels/rope.hip" and "Compiled kernels/position_embeddings.hip"
-    5. Check target/debug/build/*/out/ for rope_kernel.hsaco and position_embeddings_kernel.hsaco
+    1. Read build.rs lines 48-52 to confirm rope.hip and position_embeddings.hip are in KERNELS list
+    2. Run cargo clean to ensure fresh build
+    3. Run: cargo build --features rocm 2>&1 | tee /tmp/rope_build.log
+    4. Verify build output contains "Compiled kernels/rope.hip" and "Compiled kernels/position_embeddings.hip"
+    5. Confirm ROPE_HSACO and POSITION_EMBEDDINGS_HSACO env vars are emitted during build
+    6. Check target/debug/build/*/out/ for rope_kernel.hsaco and position_embeddings_kernel.hsaco
 
     DO NOT modify build.rs - kernels are already in the compilation list. Just verify they compile.
   </action>
-  <verify>ls target/debug/build/*/out/rope_kernel.hsaco target/debug/build/*/out/position_embeddings_kernel.hsaco 2>/dev/null && echo "RoPE HSACO files found"</verify>
-  <done>RoPE kernel HSACO files exist in build output directory</done>
-</task>
-
-<task type="auto">
-  <name>Add long context position ID test (ROPE-03)</name>
-  <files>src/attention/rope_gpu_tests.rs</files>
-  <action>
-    Add a test for position IDs > 2048 to verify long context handling:
-    1. Create new test function test_rope_gpu_long_context_positions()
-    2. Use RopeConfig with max_seq_len=4096 (simulating long context model)
-    3. Test at position 2048, 3000, 4095 to verify position scaling works
-    4. Compare CPU vs GPU results for these positions
-    5. Add to existing rope_gpu_tests.rs module after existing tests (around line 236)
-
-    Use same TEST_TOLERANCE=1e-5 as existing tests. Follow existing test pattern (get_backend_or_skip, CPU reference, GPU run, compare).
-  </action>
-  <verify>grep -n "test_rope_gpu_long_context_positions" src/attention/rope_gpu_tests.rs</verify>
-  <done>New test function verifies position IDs beyond 2048 work correctly on GPU</done>
+  <verify>
+    # Build logs show kernel compilation
+    grep -i "rope" /tmp/rope_build.log | grep -i "compiled"
+    # HSACO files exist
+    ls -la target/debug/build/*/out/rope_kernel.hsaco target/debug/build/*/out/position_embeddings_kernel.hsaco 2>/dev/null
+    # Env vars are set (check cargo build output)
+    grep -E "ROPE_HSACO|POSITION_EMBEDDINGS_HSACO" /tmp/rope_build.log
+  </verify>
+  <done>
+    RoPE kernel HSACO files exist in build output directory AND build logs confirm successful compilation of both kernels
+  </done>
 </task>
 
 <task type="auto">
@@ -118,36 +99,28 @@ Output: Verified GPU RoPE implementation with comprehensive tests confirming:
   <action>
     Verify that apply_q_device() and apply_k_device() do NOT download to CPU:
     1. Read src/attention/rope.rs apply_rope_device() method (lines 226-327)
-    2. Confirm NO to_host_vec() calls in the GPU path
-    3. Confirm cos/sin are uploaded via from_host_vec() (required - these are computed on CPU)
-    4. Verify the GPU kernel is called and synchronize() is called
-    5. Document findings: The GPU path is pure - tensors stay on GPU
+    2. Confirm NO to_host_vec() calls in the GPU hot path (lines 280-320)
+    3. Confirm cos/sin are uploaded via from_host_vec() at line ~272 (required - these are computed on CPU)
+    4. Verify the GPU kernel is called at line ~288 and synchronize() is called at line ~290
+    5. Document findings in code comment above apply_rope_device()
 
-    If any to_host_vec() is found in the hot path, document it. The current implementation should be clean.
+    If any to_host_vec() is found in the hot path, this is a bug requiring fix. The current implementation should be clean.
   </action>
-  <verify>grep -n "to_host_vec" src/attention/rope.rs | grep -A2 -B2 "apply_rope_device"</verify>
-  <done>Verified apply_rope_device() has no CPU round-trip - only cos/sin upload, then pure GPU execution</done>
+  <verify>
+    # Confirm no to_host_vec in apply_rope_device
+    ! grep -A100 "pub fn apply_rope_device" src/attention/rope.rs | grep "to_host_vec"
+    # Verify from_host_vec is used for cos/sin upload (expected)
+    grep -A100 "pub fn apply_rope_device" src/attention/rope.rs | grep "from_host_vec"
+    # Verify kernel call exists
+    grep -A100 "pub fn apply_rope_device" src/attention/rope.rs | grep "rope_gpu_kernel"
+  </verify>
+  <done>
+    Verified apply_rope_device() has no CPU round-trip - only cos/sin upload via from_host_vec(), then pure GPU execution with synchronize()
+  </done>
 </task>
 
 <task type="auto">
-  <name>Verify multi-head RoPE correctness (ROPE-02)</name>
-  <files>src/attention/rope_gpu_tests.rs</files>
-  <action>
-    Add test for multi-head RoPE to verify each head gets correct rotation:
-    1. Create test_rope_gpu_multi_head_independent_rotation()
-    2. Use num_heads=8, head_dim=8, seq_len=4
-    3. Create input where each head has distinct values
-    4. Verify CPU and GPU produce identical results for ALL heads
-    5. Check that head 0 rotation != head 1 rotation (heads are independent)
-
-    Add test after existing tests. Follow same pattern: CPU reference, GPU run, element-wise compare.
-  </action>
-  <verify>grep -n "test_rope_gpu_multi_head_independent_rotation" src/attention/rope_gpu_tests.rs</verify>
-  <done>Multi-head test verifies each head receives correct independent rotation</done>
-</task>
-
-<task type="auto">
-  <name>Document RoPE GPU execution flow verification</name>
+  <name>Document RoPE GPU execution flow (ROPE-01)</name>
   <files>src/model/glm_position.rs</files>
   <action>
     Document the complete GPU RoPE execution flow:
@@ -155,15 +128,17 @@ Output: Verified GPU RoPE implementation with comprehensive tests confirming:
     2. To glm_position.rs line 278-353: GPU kernel attempt with CPU fallback
     3. To kernels.rs line 1092-1148: position_embeddings_gpu_kernel()
     4. To position_embeddings.hip: actual HIP kernel execution
-    5. Create inline comment in glm_position.rs documenting this flow at line 278
-
-    Add comment block above apply_position_embeddings_device() explaining:
-    - GPU kernel is tried first (position_embeddings_gpu_kernel)
-    - Falls back to CPU only if kernel fails
-    - For successful GPU execution, no CPU round-trip occurs
+    5. Add comment block above apply_position_embeddings_device() at line 278 explaining:
+       - GPU kernel is tried first (position_embeddings_gpu_kernel)
+       - Falls back to CPU only if kernel fails
+       - For successful GPU execution, no CPU round-trip occurs
   </action>
-  <verify>grep -n "GPU RoPE execution flow" src/model/glm_position.rs</verify>
-  <done>Execution flow documented in code comments for maintainability</done>
+  <verify>
+    grep -n "GPU RoPE execution flow" src/model/glm_position.rs
+  </verify>
+  <done>
+    Execution flow documented in code comments at line 278 in glm_position.rs explaining GPU-first strategy with CPU fallback
+  </done>
 </task>
 
 </tasks>
@@ -171,23 +146,19 @@ Output: Verified GPU RoPE implementation with comprehensive tests confirming:
 <verification>
 After all tasks complete, verify:
 
-1. RoPE HSACO files exist in build output (ROPE-04)
-2. New long context test passes (ROPE-03)
-3. Multi-head test passes (ROPE-02)
-4. No to_host_vec() in GPU RoPE hot path (ROPE-06)
-5. Documentation added explaining GPU flow (ROPE-01)
-6. All existing rope_gpu_tests still pass
+1. RoPE HSACO files exist in build output (rope_kernel.hsaco, position_embeddings_kernel.hsaco)
+2. Build logs show successful kernel compilation
+3. No to_host_vec() in GPU RoPE hot path (only from_host_vec for cos/sin upload)
+4. Documentation added explaining GPU flow in glm_position.rs
 
-Run: cargo test --features rocm --lib rope 2>&1 | grep -E "(test result|running)"
+Run: ls target/debug/build/*/out/*rope*.hsaco && echo "RoPE kernels compiled"
 </verification>
 
 <success_criteria>
-1. All RoPE kernels compile successfully (HSACO files present)
-2. Long context position test (positions > 2048) passes
-3. Multi-head independent rotation test passes
-4. Code review confirms no CPU round-trip in GPU path
-5. Execution flow documented in glm_position.rs
-6. All rope_gpu_tests pass (GPU matches CPU)
+1. Both RoPE kernels compile successfully (HSACO files present in build output)
+2. Build logs explicitly confirm "Compiled kernels/rope.hip" and "Compiled kernels/position_embeddings.hip"
+3. Code review confirms no to_host_vec() in GPU RoPE hot path
+4. Execution flow documented in glm_position.rs at apply_position_embeddings_device()
 </success_criteria>
 
 <output>
