docs(20): revise plans based on checker feedback
- Split plan 20-06 (6 tasks) into 3 plans (20-06, 20-07, 20-08)
- Added explicit depends_on to Wave 2 and Wave 3 plans
- Updated wave structure to reflect 4 waves instead of 3
- Phase 20 now has 8 plans (was 6)

--- a/.planning/phases/20-code-hygiene-completion/20-04-PLAN.md
+++ b/.planning/phases/20-code-hygiene-completion/20-04-PLAN.md
@@ -3,7 +3,7 @@ phase: 20-code-hygiene-completion
 plan: 04
 type: execute
 wave: 2
-depends_on: []
+depends_on: ["20-01", "20-02", "20-03"]
 files_modified:
   - src/attention/flash_attention.rs
   - src/attention/gpu.rs
