--- a/.planning/phases/20-code-hygiene-completion/20-05-PLAN.md
+++ b/.planning/phases/20-code-hygiene-completion/20-05-PLAN.md
@@ -2,15 +2,12 @@
 phase: 20-code-hygiene-completion
 plan: 05
 type: execute
-wave: 3
-depends_on: []
+wave: 2
+depends_on: ["20-01", "20-02", "20-03"]
 files_modified:
   - src/attention/multi_query.rs
   - src/profiling/ttft.rs
-  - src/backend/hip_backend/backend.rs
-  - src/ggml/hip_backend/mod.rs
-  - src/loader/gguf.rs
-  - src/model/execution_plan/execution_plan_src.rs
+  - src/ggml/hip_backend/ops/q4_0_dequant.rs
 autonomous: true
 user_setup: []
 
@@ -39,7 +36,7 @@ must_haves:
 <objective>
 Fix unused mut, unused assignment, and remaining privacy warnings.
 
-Purpose: These are simple hygiene fixes - removing unnecessary mut keywords and handling unused assignments. The privacy warning for Q4_0DequantCache should be addressed here (not in plan 02).
+Purpose: These are simple hygiene fixes - removing unnecessary mut keywords and handling unused assignments. The privacy warning for Q4_0DequantCache should be addressed here.
 
 Output: 5 remaining simple warnings eliminated.
 </objective>
