--- a/.planning/phases/20-code-hygiene-completion/20-06-PLAN.md
+++ b/.planning/phases/20-code-hygiene-completion/20-06-PLAN.md
@@ -3,47 +3,37 @@ phase: 20-code-hygiene-completion
 plan: 06
 type: execute
 wave: 3
-depends_on: []
+depends_on: ["20-04", "20-05"]
 files_modified:
   - src/backend/hip_backend/backend.rs
   - src/ggml/hip_backend/mod.rs
   - src/loader/gguf.rs
   - src/model/execution_plan/execution_plan_src.rs
-  - src/attention/mod.rs
-  - src/attention/multi_query.rs
-  - src/kv_cache/mod.rs
-  - src/scheduler/mod.rs
 autonomous: true
 user_setup: []
 
 must_haves:
   truths:
-    - "All #[allow(dead_code)] markers are reviewed"
-    - "Unused fields and methods are either removed or have explicit justification"
-    - "Zero compiler warnings baseline achieved"
+    - "All remaining dead_code warnings are categorized"
+    - "Unused fields are identified for review"
+    - "Baseline for final cleanup established"
   artifacts:
-    - path: "src/backend/hip_backend/backend.rs"
-      provides: "Reviewed vec_from_buffer and module/event fields"
-      contains: "either used or removed with #[allow(dead_code)] justification"
-    - path: "src/ggml/hip_backend/mod.rs"
-      provides: "Reviewed module field in struct"
-      contains: "either used or removed"
-    - path: "src/loader/gguf.rs"
-      provides: "Reviewed unused constants and methods"
-      contains: "either used or removed"
+    - path: "Dead code analysis output"
+      provides: "Complete categorization of all dead code warnings"
+      contains: "list by file and warning type"
   key_links:
-    - from: "dead_code markers"
-      to: "actual usage or removal"
-      via: "code review and grep"
-      pattern: "#\\[allow\\(dead_code\\)\\]"
+    - from: "cargo check warnings"
+      to: "categorized list"
+      via: "warning parsing and categorization"
+      pattern: "field.*is never read|method.*is never used|function.*is never used"
 ---
 
 <objective>
-Review and resolve all dead_code warnings and unused items.
+Categorize all remaining dead code warnings and fix unused fields.
 
-Purpose: This is the final hygiene sweep - reviewing all "is never read/used" warnings and either removing truly dead code or documenting why it's kept. HYGIENE-03 requires reviewing all #[allow(dead_code)] markers.
+Purpose: First of three plans to resolve dead_code warnings. This plan categorizes all warnings and fixes unused fields in backend files.
 
-Output: Zero compiler warnings baseline achieved (HYGIENE-07).
+Output: Complete categorization of warnings; unused fields resolved.
 </objective>
 
 <execution_context>
@@ -74,7 +64,7 @@ Output: Zero compiler warnings baseline achieved (HYGIENE-07).
     - associated items X are never used
 
     Create a list of all affected files and line numbers.
-    This will guide the systematic cleanup.
+    This will guide the systematic cleanup in this and subsequent plans.
   </action>
   <verify>Complete list of dead code warnings generated</verify>
   <done>All dead code warnings categorized by file and type</done>
@@ -101,128 +91,23 @@ Output: Zero compiler warnings baseline achieved (HYGIENE-07).
     - qkt_matmul_module, softmax_module, weighted_matmul_module
     - qk_kernel, softmax_kernel, v_kernel
     - event, instant, head_size_bytes
-    - size, model_path, max_seq_len, memory_tracking, config
-    - scores_id, softmax_id
-    - tokens, token
   </action>
   <verify>grep "field.*is never read" &lt;(cargo check --features rocm 2>&1) | wc -l reduced or justified</verify>
-  <done>All unused fields reviewed and handled</done>
-</task>
-
-<task type="auto">
-  <name>Review and fix unused functions and methods</name>
-  <files>
-    src/backend/hip_backend/backend.rs
-    src/loader/gguf.rs
-    src/model/execution_plan/execution_plan_src.rs
-    src/attention/mod.rs
-    src/attention/multi_query.rs
-    src/kv_cache/mod.rs
-    src/scheduler/mod.rs
-  </files>
-  <action>
-    For each "function/method X is never used" warning:
-    1. Search for any usage with grep -r "function_name" src/
-    2. If truly unused:
-       - If it's a public API for external use, keep it
-       - If it's obsolete, remove it
-       - If it's for future work, add #[allow(dead_code)] with TODO
-    3. If used via trait or dynamic dispatch, add #[allow(dead_code)] with justification
-
-    Affected items (from warning analysis):
-    - vec_from_buffer (backend.rs)
-    - validate_input_shapes (attention/mod.rs)
-    - record_retry_attempt (scheduler/mod.rs)
-    - token_to_text (somewhere)
-    - is_embedding_weight, read_tensor_data, upload_tensor_to_gpu, dequantize_mxfp4, dequantize_mxfp6 (gguf.rs)
-    - from_bits, to_f32 (gguf.rs)
-  </action>
-  <verify>grep "is never used" &lt;(cargo check --features rocm 2>&1) | wc -l reduced or justified</verify>
-  <done>All unused functions reviewed and handled</done>
-</task>
-
-<task type="auto">
-  <name>Review and fix unused constants and type aliases</name>
-  <files>
-    src/backend/hip_backend/backend.rs
-    src/loader/gguf.rs
-    src/ggml/hip_backend/mod.rs
-  </files>
-  <action>
-    For each "constant/type alias X is never used" warning:
-    1. Search for usage with grep
-    2. If truly unused:
-       - If it's part of a public API or for future features, keep with #[allow(dead_code)]
-       - If it's obsolete, remove it
-    3. For constants like PAGED_ATTENTION_KERNEL, HIP_EVENT_DEFAULT - these are likely for
-       features not yet implemented; add #[allow(dead_code)] with TODO comments
-
-    Affected items:
-    - PAGED_ATTENTION_KERNEL
-    - HIP_EVENT_DEFAULT
-    - DEFAULT_LOG_LEVEL
-    - Q4_0_BLOCK_SIZE, Q4_0_ELEMENTS_PER_BLOCK, Q8_0_ELEMENTS_PER_BLOCK
-    - block_size, num_heads, head_dim (struct fields)
-    - ParallelResult (type alias)
-  </action>
-  <verify>grep -E "constant.*is never used|type alias.*is never used" &lt;(cargo check --features rocm 2>&1) | wc -l reduced or justified</verify>
-  <done>All unused constants and type aliases reviewed</done>
-</task>
-
-<task type="auto">
-  <name>Review existing #[allow(dead_code)] markers</name>
-  <files></files>
-  <action>
-    Search for all #[allow(dead_code)] markers:
-    grep -rn "#\[allow(dead_code)\]" src/ --include="*.rs"
-
-    For each marker:
-    1. Read the context
-    2. Verify it's still appropriate (code is still unused for a valid reason)
-    3. Add a comment explaining why the dead_code marker exists (e.g., "#[allow(dead_code)] TODO: integrate in Phase X")
-    4. Remove the marker if the code is now actually used
-
-    This satisfies HYGIENE-03 requirement.
-  </action>
-  <verify>All #[allow(dead_code)] markers have explanatory comments</verify>
-  <done>HYGIENE-03 requirement satisfied</done>
-</task>
-
-<task type="auto">
-  <name>Verify zero warnings baseline achieved</name>
-  <files></files>
-  <action>
-    Run cargo check --features rocm.
-    Count total warnings.
-    Target: Zero compiler warnings for lib (bin warnings may remain for CLI).
-
-    If warnings remain, categorize and decide:
-    - Can they be fixed in this phase? (fix them)
-    - Do they require architectural changes? (document in STATE.md as technical debt)
-    - Are they acceptable? (add #[allow] with justification)
-
-    The goal is HYGIENE-07: Zero compiler warnings baseline.
-  </action>
-  <verify>cargo check --features rocm 2>&1 | grep "generated.*warnings" shows minimal acceptable count</verify>
-  <done>HYGIENE-07 requirement satisfied (zero warnings baseline)</done>
+  <done>All unused fields in backend files reviewed and handled</done>
 </task>
 
 </tasks>
 
 <verification>
-1. Run cargo check --features rocm and verify warning count is at baseline
-2. Confirm all #[allow(dead_code)] markers have explanatory comments
-3. Verify all unused items have been reviewed and documented
-4. Ensure no truly dead code remains without justification
+1. Run cargo check --features rocm and capture categorized warning list
+2. Confirm all backend struct fields reviewed
+3. Verify warning count reduced or justified with comments
 </verification>
 
 <success_criteria>
-- HYGIENE-03 satisfied: All #[allow(dead_code)] markers reviewed and documented
-- HYGIENE-07 satisfied: Zero compiler warnings baseline achieved
-- All unused fields reviewed with explicit keep/remove decisions
-- All unused functions/methods reviewed with explicit decisions
-- All unused constants/type aliases reviewed
-- Technical debt documented for items kept for future use
+- Complete categorization of all dead code warnings
+- All unused fields in backend files handled (removed or justified)
+- Warning count baseline established for remaining cleanup
 </success_criteria>
 
 <output>
